--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HBT</title>
+    <meta
+      name="description"
+      content="Welcome to the beautiful and extraordinary hotel in florence italy"
+    />
+    <meta name="keywords" content=" Hotel itay, hotel florence" />
+    <title>Hotel Florence | Welcome</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav id="navbar">
+        <div class="container">
+          <h1 class="logo"><a href="./index.html">HF</a></h1>
+          <ul>
+            <li><a class="current" href="./index.html">Home</a></li>
+            <li><a href="./About.html">About</a></li>
+            <li><a href="./Contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
