--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
           </ul>
         </div>
       </nav>
+      <div id="showcase">
+        <div class="container">
+          <div id="showcase-content">
+            <h1>Enjoy your Stay</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem distinctio dicta quas! Voluptatibus corrupti
+              perspiciatis ad earum voluptate quasi sequi.
+            </p>
+            <a href="./About.html" class="btn">About our Hotel</a>
+          </div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
