finished home page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     />
     <meta name="keywords" content=" Hotel itay, hotel florence" />
     <title>Hotel Florence | Welcome</title>
+    <script
+      src="https://kit.fontawesome.com/ed6152016d.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -26,8 +30,8 @@
       <div id="showcase">
         <div class="container">
           <div id="showcase-content">
-            <h1>Enjoy your Stay</h1>
-            <p>
+            <h1><span class="text-primary"> Enjoy </span>your Stay</h1>
+            <p class="lead">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatem distinctio dicta quas! Voluptatibus corrupti
               perspiciatis ad earum voluptate quasi sequi.
@@ -37,5 +41,55 @@
         </div>
       </div>
     </header>
+    <section id="home-info" class="bg-dark">
+      <div id="info-img"></div>
+      <div id="info-content">
+        <h2><span class="text-primary">The History</span> of our hotel</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem harum
+          quisquam voluptas facilis cum, dolor consequuntur? Deserunt nulla
+          unde, pariatur dolorum necessitatibus voluptates ipsum officia
+          blanditiis quam animi fuga quidem asperiores id saepe officiis
+          possimus! Atque minima repellendus nesciunt delectus.
+        </p>
+        <a href="./About.html" class="btn btn-light">Read More</a>
+      </div>
+    </section>
+    <section id="features">
+      <div class="box bg-light">
+        <i class="fas fa-hotel fa-3x"></i>
+        <h3>Great Location</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure eveniet
+          nemo obcaecati dolores reiciendis ducimus modi soluta dolore
+          blanditiis accusamus?
+        </p>
+      </div>
+      <div class="box bg-primary">
+        <i class="fas fa-utensils fa-3x"></i>
+        <h3>free meals</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+          nesciunt quos facilis nemo voluptas, qui sed officiis quaerat
+          distinctio quo.
+        </p>
+      </div>
+      <div class="box bg-light">
+        <i class="fas fa-dumbbell fa-3x"></i>
+        <h3>Fitness room</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore,
+          incidunt corrupti quaerat odit deleniti veniam laudantium voluptas
+          quod quasi tempore.
+        </p>
+      </div>
+    </section>
+    <div class="clr"></div>
+    <footer id="main-footer">
+      <p>
+        Hotel Florence <span class="text-primary"> &copy; 2020</span>, All
+        Rights Reserved
+      </p>
+    </footer>
   </body>
 </html>
