--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
       src="https://kit.fontawesome.com/ed6152016d.js"
       crossorigin="anonymous"
     ></script>
+
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="mobile.css"
+    />
   </head>
   <body>
     <header>
