added pics of the website

--- a/About.html
+++ b/About.html
@@ -52,7 +52,7 @@
     <div class="clr"></div>
     <section id="testamonials" class="py-3">
       <div class="container">
-        <h3>What Out Guests Say</h3>
+        <h3>What Our Guests Say</h3>
         <div class="testamonial bg-primary">
           <img src="./IMG/person-1.jpg" alt="samnatha" />
           <p>
